refactor: code generation of museum data api
